--- a/src/style/_setting.scss
+++ b/src/style/_setting.scss
@@ -18,15 +18,27 @@ $white: #f0eee9;
   transition: 50ms;
 }
 
-input,
+@mixin media-query($breakpoints) {
+  @media screen and (max-width: $breakpoints) {
+    @content;
+  }
+}
+.input,
 .form-button {
   width: 100%;
   height: 37px;
   border-radius: 5px;
   border: 1px solid $primary-color;
 }
-button {
-  font-size: 16x;
+input {
+  background-color: $tertiary-color;
+}
+button,
+.signup,
+.form-button {
+  display: grid;
+  place-items: center;
+  font-size: 16px;
   font-weight: 800;
   font-family: sans-serif;
   color: $primary-color;
@@ -39,10 +51,18 @@ button {
 a {
   text-decoration: none;
   color: $primary-color;
+  font-weight: 600;
 }
-
-@mixin media-query($breakpoints) {
-  @media screen and (max-width: $breakpoints) {
-    @content;
-  }
+.flex-center {
+  width: 100%;
+  @include flexItem(center, center, unset);
+  gap: 5px;
+}
+.error {
+  color: red;
+  font-size: 14px;
+  margin: 0;
+  width: 100%;
+  display: grid;
+  place-items: center;
 }
