--- a/src/style/_sign-in.scss
+++ b/src/style/_sign-in.scss
@@ -5,12 +5,13 @@
   height: 100vh;
   @include flexItem(center, center, unset);
   .signin-content {
-    height: 330px;
-    width: 20%;
+    gap: 30px;
+    width: 25%;
     @include flexItem(center, space-between, column);
     .form {
       width: 100%;
       height: 70%;
+      gap: 15px;
       color: $primary-color;
       @include flexItem(flex-end, space-between, column);
       &-input {
